[gd_scene load_steps=3 format=3 uid="uid://sp20j6d8sit7"]

[ext_resource type="Theme" path="res://src/code_theme.tres" id="1_cub2j"]
[ext_resource type="Script" uid="uid://ddtoj3hbg73cb" path="res://src/player/debug_UI.gd" id="2_cuc7f"]

[node name="Debug" type="Control" node_paths=PackedStringArray("time_scale")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cub2j")
script = ExtResource("2_cuc7f")
time_scale = NodePath("game_info/stats_readonly/_/HBoxContainer/HSlider")

[node name="player_mobil_readonly" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 144.0
offset_bottom = 270.0

[node name="mobility_readonly" type="PanelContainer" parent="player_mobil_readonly"]
layout_mode = 2

[node name="_" type="VBoxContainer" parent="player_mobil_readonly/mobility_readonly"]
layout_mode = 2

[node name="title" type="Label" parent="player_mobil_readonly/mobility_readonly/_"]
layout_mode = 2
text = "Player Mobility Values :: Readonly"
justification_flags = 131

[node name="seperator" type="HSeparator" parent="player_mobil_readonly/mobility_readonly/_"]
layout_mode = 2

[node name="base_speed" type="Label" parent="player_mobil_readonly/mobility_readonly/_"]
layout_mode = 2
text = "BASE Speed: {%s}"

[node name="walk_multi" type="Label" parent="player_mobil_readonly/mobility_readonly/_"]
layout_mode = 2
text = "WALK Multi: %s"

[node name="sprint_multi" type="Label" parent="player_mobil_readonly/mobility_readonly/_"]
layout_mode = 2
text = "SPRINT Multi: %s"

[node name="sneak_multi" type="Label" parent="player_mobil_readonly/mobility_readonly/_"]
layout_mode = 2
text = "SNEAK Multi: %s"

[node name="mobility_setter_ui" type="PanelContainer" parent="player_mobil_readonly"]
layout_mode = 2

[node name="_" type="VBoxContainer" parent="player_mobil_readonly/mobility_setter_ui"]
layout_mode = 2

[node name="title" type="Label" parent="player_mobil_readonly/mobility_setter_ui/_"]
layout_mode = 2
text = "Player Mobility Values :: Setter"
justification_flags = 131

[node name="seperator" type="HSeparator" parent="player_mobil_readonly/mobility_setter_ui/_"]
layout_mode = 2

[node name="walk_multi" type="HBoxContainer" parent="player_mobil_readonly/mobility_setter_ui/_"]
layout_mode = 2

[node name="_" type="Label" parent="player_mobil_readonly/mobility_setter_ui/_/walk_multi"]
layout_mode = 2
text = "WALK Multi:"

[node name="spin_box" type="SpinBox" parent="player_mobil_readonly/mobility_setter_ui/_/walk_multi"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="sprint_multi" type="HBoxContainer" parent="player_mobil_readonly/mobility_setter_ui/_"]
layout_mode = 2

[node name="_" type="Label" parent="player_mobil_readonly/mobility_setter_ui/_/sprint_multi"]
layout_mode = 2
text = "SPRINT Multi:"

[node name="spin_box" type="SpinBox" parent="player_mobil_readonly/mobility_setter_ui/_/sprint_multi"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="sneak_multi" type="HBoxContainer" parent="player_mobil_readonly/mobility_setter_ui/_"]
layout_mode = 2

[node name="_" type="Label" parent="player_mobil_readonly/mobility_setter_ui/_/sneak_multi"]
layout_mode = 2
text = "SNEAK Multi:"

[node name="spin_box" type="SpinBox" parent="player_mobil_readonly/mobility_setter_ui/_/sneak_multi"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="player_stats_readonly" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 150.0
offset_right = 273.0
offset_bottom = 167.0

[node name="stats_readonly" type="PanelContainer" parent="player_stats_readonly"]
layout_mode = 2

[node name="_" type="VBoxContainer" parent="player_stats_readonly/stats_readonly"]
layout_mode = 2

[node name="title" type="Label" parent="player_stats_readonly/stats_readonly/_"]
layout_mode = 2
text = "Player Mobility Values :: Readonly"
justification_flags = 131

[node name="seperator" type="HSeparator" parent="player_stats_readonly/stats_readonly/_"]
layout_mode = 2

[node name="sanity" type="Label" parent="player_stats_readonly/stats_readonly/_"]
layout_mode = 2
text = "SANITY: %s"

[node name="coordinates_readonly" type="PanelContainer" parent="player_stats_readonly"]
layout_mode = 2

[node name="_" type="VBoxContainer" parent="player_stats_readonly/coordinates_readonly"]
layout_mode = 2

[node name="title" type="Label" parent="player_stats_readonly/coordinates_readonly/_"]
layout_mode = 2
text = "Current Values :: Readonly"
justification_flags = 131

[node name="seperator" type="HSeparator" parent="player_stats_readonly/coordinates_readonly/_"]
layout_mode = 2

[node name="coords" type="Label" parent="player_stats_readonly/coordinates_readonly/_"]
layout_mode = 2
text = "Coords: %s"

[node name="velocity" type="Label" parent="player_stats_readonly/coordinates_readonly/_"]
layout_mode = 2
text = "velocity: %s"

[node name="game_info" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 280.0
offset_right = 403.0
offset_bottom = 167.0

[node name="stats_readonly" type="PanelContainer" parent="game_info"]
layout_mode = 2

[node name="_" type="VBoxContainer" parent="game_info/stats_readonly"]
layout_mode = 2

[node name="title" type="Label" parent="game_info/stats_readonly/_"]
layout_mode = 2
text = "game info"
justification_flags = 131

[node name="seperator" type="HSeparator" parent="game_info/stats_readonly/_"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="game_info/stats_readonly/_"]
layout_mode = 2

[node name="sanity" type="Label" parent="game_info/stats_readonly/_/HBoxContainer"]
layout_mode = 2
text = "time_scale:"

[node name="HSlider" type="HSlider" parent="game_info/stats_readonly/_/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
max_value = 1.0
